// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success login 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"login-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"username\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Username</label>
      </div>
      <div class=\\"group\\">
        <input name=\\"password\\" type=\\"password\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Password</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Login</span></button>
      </div>
    </form>
  </div>
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`success login 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <!--for-->
    <a href=\\"projects/create\\" class=\\"project-card project-card-create\\">
      <div class=\\"create-icon\\"></div>
      <!--default-->
    </a>
    <!--LinkTo-->
  </div>
  <!--ProjectsList-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
